I've changed the background of the information section of the index.html page and i have added a new file to the styling folder and have linked the form.html page this new file

--- a/styling/style.css
+++ b/styling/style.css
@@ -64,7 +64,7 @@ h3 {
 #information {
     padding:200px;
     text-align: center;
-    background-color:indianred ;
+    background-color: black;
     color: white;
     font-size: large;
     font-weight: 700;
